--- a/assets/css/_typography.css
+++ b/assets/css/_typography.css
@@ -34,6 +34,14 @@ h6 {
   font-size: 1rem
 }
 
+.headings-small h1,
+.headings-small h2,
+.headings-small h3,
+.headings-small h4,
+.headings-small h5 {
+  font-size: 1rem;
+}
+
 a {
   text-decoration: underline;
   color: var(--link);
