--- a/content/experiments.njk
+++ b/content/experiments.njk
@@ -8,3 +8,12 @@ eleventyNavigation:
 ---
 {% extends "structure/pages/list-experiments.njk" %}
 {% set postslist = collections.experiments %}
+
+{%- block right -%}
+<h2 class="visually-hidden">RSS feed</h2>
+<ul class="unstyled">
+  <li>
+    <a href="/experiments.xml" class="rss">RSS feed</a>
+  </li>
+</ul>
+ {%- endblock %}
