--- a/content/not_found.njk
+++ b/content/not_found.njk
@@ -2,6 +2,7 @@
 title: 404
 draft: true
 permalink: not_found.html
+eleventyExcludeFromCollections: true
 ---
 {% extends 'structure/templates/page-3col.njk'%}
 
