🟧 Update RSS feed descriptions

--- a/content/rss/changelog.njk
+++ b/content/rss/changelog.njk
@@ -3,8 +3,8 @@
   "permalink": "changelog.xml",
   "eleventyExcludeFromCollections": true,
   "metadata": {
-    "title": "Frills' internet emporium",
-    "subtitle": "Personal and dev blog of Frills",
+    "title": "Frills' changelog",
+    "subtitle": "Changelog and updates from Frills",
     "language": "en",
     "url": "https://fri11s.neocities.org/changelog",
     "author": {
