--- a/content/rss/experiments.njk
+++ b/content/rss/experiments.njk
@@ -3,8 +3,8 @@
   "permalink": "experiments.xml",
   "eleventyExcludeFromCollections": true,
   "metadata": {
-    "title": "Frills' internet emporium",
-    "subtitle": "Personal and dev blog of Frills",
+    "title": "Frills' experiments",
+    "subtitle": "Fun experiments by Frills",
     "language": "en",
     "url": "https://fri11s.neocities.org/",
     "author": {
