🟧 Update RSS feed URL

--- a/content/rss/experiments.njk
+++ b/content/rss/experiments.njk
@@ -6,7 +6,7 @@
     "title": "Frills' experiments",
     "subtitle": "Fun experiments by Frills",
     "language": "en",
-    "url": "https://fri11s.neocities.org/",
+    "url": "https://fri11s.neocities.org/experiments",
     "author": {
       "name": "Frills",
       "email": "fri11s@proton.me"
