📃 Move changelog link from fotoer to About

--- a/content/site.njk
+++ b/content/site.njk
@@ -10,6 +10,10 @@ emoji: <span class="emoji" aria-hidden="true">👩‍💻</span>
 {%- block main -%}
 <section>
 	<div class="reading-width">
+		<h2>Site links</h2>
+		<ul class="stars">
+			<li><span class="emoji" aria-hidden="true">✨</span> <a href="/changelog">Changelog</a>
+		</ul>
 		<h2>Technical information</h2>
 		<ul class="stars">
 			<li>Built using <a href="https://www.11ty.dev/" target="_blank">eleventy</a> static site generator</li>
