--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -136,13 +136,25 @@
 			</a>
 		</li>
 		<li class="buttonwall__item">
-			<a href="https://jessicajournals.com" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1; background-image: linear-gradient(to left, #181825, #1e1e2e)">jessica journals</a>
+			<a href="https://amberwilson.co.uk/" style="font-size: 14px;  background-color: #b6d0f1; color: #4b0e90;">Amber Wilson</a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://eevis.codes/" style="font-size: 14px; background-color: #0d0221; color: #e76f51;">Eevis</a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://jessicajournals.com" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1;">jessica journals</a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://kittygiraudel.com/" style="font-size: 10px; background-color: #d97eb4; color: #222222;">Kitty Giraudel</a>
 		</li>
 		<li class="buttonwall__item">
 			<a href="https://nohappynonsense.net/" style="font-size: 10px; background-color: #fcfce3; color: black;">no happy nonsense</a>
 		</li>
 		<li class="buttonwall__item">
 			<a href="https://sleepydev.neocities.org" style="font-size: 13px; background-color: #f9f9f9; color: blueviolet;">sleepy dev</a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://thinkdobecreate.com/" style="font-size: 13px; background-color: #fff; color: #7d4ce0;">Stephanie Eckles</a>
 		</li>
 		<li class="buttonwall__item">
 			<a href="https://10kph.neocities.org" style="font-size: 14px; background-color: #1c1e26; color: #e95678;">10kph</a>
