🤪 Remove emoji from changelog link

--- a/content/site.njk
+++ b/content/site.njk
@@ -12,7 +12,7 @@ emoji: <span class="emoji" aria-hidden="true">👩‍💻</span>
 	<div class="reading-width">
 		<h2>Site links</h2>
 		<ul class="stars">
-			<li><span class="emoji" aria-hidden="true">✨</span> <a href="/changelog">Changelog</a>
+			<li><a href="/changelog">Changelog</a>
 		</ul>
 		<h2>Technical information</h2>
 		<ul class="stars">
