--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,7 +110,7 @@
 
 .tag {
   background-color: deepskyblue;
-  color: var(--bg);
+  color: black;
   padding: 2px 8px;
   border-radius: 4px;
   font-size: 90%;
