📍 Update button wall

--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -1,24 +1,4 @@
 <section class="reading-width">
-	<h2>Friends</h2>
-	<ul class="buttonwall">
-		<li class="buttonwall__item">
-			<a href="https://gothhoblin.me" style="font-size: 12px; background-color: #083820; color: #fff;">goth hoblin</a>
-		</li>
-		<li class="buttonwall__item">
-			<a href="https://www.thenotsomiserable.co.uk" style="font-size: 12px; background-color: #5f0979; color: #fff;">the not so miserable</a>
-		</li>
-		<li class="buttonwall__item">
-			<a href="https://teafuellednonsense.wordpress.com" class="" style="font-size: 12px; background-color: #fff; color: #00aadc;">Justin Blogs Again!</a>
-		</li>
-		<li class="buttonwall__item">
-			<a href="https://justnik.me/" style="font-size: 12px; background-color: #2d3748; color: #fff;">justnik</a>
-		</li>
-		<li class="buttonwall__item">
-			<a href="https://www.owain.codes/" style="font-size: 12px; background-color: #222831; color: #b6ff00;">owain.codes</a>
-		</li>
-	</ul>
-
-	<h2>Neighbours</h2>
 	<ul class="buttonwall">
 		<li class="buttonwall__image">
 			<a href="https://midifreak.online/">
@@ -136,16 +116,16 @@
 			</a>
 		</li>
 		<li class="buttonwall__item">
-			<a href="https://amberwilson.co.uk/" style="font-size: 14px;  background-color: #b6d0f1; color: #4b0e90;">Amber Wilson</a>
+			<a href="https://amberwilson.co.uk/" style="font-size: 13px;  background-color: #b6d0f1; color: #4b0e90;">Amber Wilson</a>
 		</li>
 		<li class="buttonwall__item">
-			<a href="https://eevis.codes/" style="font-size: 14px; background-color: #0d0221; color: #e76f51;">Eevis</a>
+			<a href="https://eevis.codes/" style="font-size: 15px; background-color: #e76f51; color: #0d0221;">Eevis</a>
 		</li>
 		<li class="buttonwall__item">
 			<a href="https://jessicajournals.com" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1;">jessica journals</a>
 		</li>
 		<li class="buttonwall__item">
-			<a href="https://kittygiraudel.com/" style="font-size: 10px; background-color: #d97eb4; color: #222222;">Kitty Giraudel</a>
+			<a href="https://kittygiraudel.com/" style="font-size: 11px; background-color: #d97eb4; color: #222222;">Kitty Giraudel</a>
 		</li>
 		<li class="buttonwall__item">
 			<a href="https://nohappynonsense.net/" style="font-size: 10px; background-color: #fcfce3; color: black;">no happy nonsense</a>
@@ -154,10 +134,55 @@
 			<a href="https://sleepydev.neocities.org" style="font-size: 13px; background-color: #f9f9f9; color: blueviolet;">sleepy dev</a>
 		</li>
 		<li class="buttonwall__item">
-			<a href="https://thinkdobecreate.com/" style="font-size: 13px; background-color: #fff; color: #7d4ce0;">Stephanie Eckles</a>
+			<a href="https://thinkdobecreate.com/" style="font-size: 12px; background-color: #7d4ce0; color: #fff;">Stephanie Eckles</a>
 		</li>
 		<li class="buttonwall__item">
 			<a href="https://10kph.neocities.org" style="font-size: 14px; background-color: #1c1e26; color: #e95678;">10kph</a>
+		</li>
+	</ul>
+
+	<h2>Friends</h2>
+	<ul class="buttonwall">
+		<li class="buttonwall__item">
+			<a href="https://gothhoblin.me" style="font-size: 12px; background-color: #083820; color: #fff;">goth hoblin</a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://www.thenotsomiserable.co.uk" style="font-size: 12px; background-color: #5f0979; color: #fff;">the not so miserable</a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://teafuellednonsense.wordpress.com" class="" style="font-size: 12px; background-color: #fff; color: #00aadc;">Justin Blogs Again!</a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://justnik.me/" style="font-size: 12px; background-color: #2d3748; color: #fff;">justnik</a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://www.owain.codes/" style="font-size: 12px; background-color: #222831; color: #b6ff00;">owain.codes</a>
+		</li>
+	</ul>
+
+	h2>Creatives</h2>
+	<ul class="buttonwall">
+		{# Artists #}
+		<li class="buttonwall__item">
+			<a href="https://cheyennebarton.com/" style="font-size: 14px; background-color: #ffc929; color: #fa4723;">cheyenne barton</a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://www.furrylittlepeach.com" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://www.patreon.com/girlscape" style="font-size: 13px; background-color: #ff91bb; color: #fff;">girlscape</a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://leighellexson.com" style="font-size: 12px; background-color: #9bc18a; color: #fdfbf7;">Leigh Ellexson</a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://www.pansy-shop.com" style="font-size: 16px; background-color: #ffe3e2; color: #220967;">pansy</a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://www.patreon.com/palomathepeach" style="font-size: 12px; background-color: #feebb3; color: #212117;">paloma the peach</a>
+		</li>
+		<li class="buttonwall__item">
+			<a href="https://uncomfyco.com" style="font-size: 13px; background-color: #603814; color: #fff;">uncomfyco</a>
 		</li>
 	</ul>
 
@@ -186,31 +211,7 @@
 			<a href="https://goblin.tools/" style="font-size: 14px; background-color: limegreen; color: black;">goblin tools</a>
 		</li>
 	</ul>
-	<h2>Creatives</h2>
-	<ul class="buttonwall">
-		{# Artists #}
-		<li class="buttonwall__item">
-			<a href="https://cheyennebarton.com/" style="font-size: 14px; background-color: #ffc929; color: #fa4723;">cheyenne barton</a>
-		</li>
-		<li class="buttonwall__item">
-			<a href="https://www.furrylittlepeach.com" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
-		</li>
-		<li class="buttonwall__item">
-			<a href="https://www.patreon.com/girlscape" style="font-size: 13px; background-color: #ff91bb; color: #fff;">girlscape</a>
-		</li>
-		<li class="buttonwall__item">
-			<a href="https://leighellexson.com" style="font-size: 12px; background-color: #9bc18a; color: #fdfbf7;">Leigh Ellexson</a>
-		</li>
-		<li class="buttonwall__item">
-			<a href="https://www.pansy-shop.com" style="font-size: 16px; background-color: #ffe3e2; color: #220967;">pansy</a>
-		</li>
-		<li class="buttonwall__item">
-			<a href="https://www.patreon.com/palomathepeach" style="font-size: 12px; background-color: #feebb3; color: #212117;">paloma the peach</a>
-		</li>
-		<li class="buttonwall__item">
-			<a href="https://uncomfyco.com" style="font-size: 13px; background-color: #603814; color: #fff;">uncomfyco</a>
-		</li>
-	</ul>
+
 	<button id="toggleHighContrast" class="button mb-1" aria-pressed="false">Enable high contrast</button>
 </section>
 
