--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,179 +1,28 @@
-@import url('_variables.css');
-@import url('_font.css');
-@import url('_typography.css');
-@import url('_global.css');
-@import url('_grid.css');
-@import url('_page.css');
-@import url('_nav.css');
-@import url('_utility.css');
-@import url('_button.css');
-@import url('_form.css');
-@import url('_logo.css');
-@import url('_toggle.css');
-@import url('_list.css');
-@import url('_articles.css');
-@import url('_buttonwall.css');
-@import url('_callout.css');
-@import url('_animation.css');
-@import url('_spooky.css');
+@import url('./abstracts/_variables.css');
+@import url('./abstracts/_utility.css');
+@import url('./abstracts/_animation.css');
 
-.settings {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  gap: 15px;
-  position: absolute;
-  top: 2rem;
-  right: 1rem;
-}
-@media (min-width: 768px) {
-  .settings {
-    position: relative;
-    top: inherit;
-    right: inherit;
-  }
-}
+@import url('./base/_font.css');
+@import url('./base/_form.css');
+@import url('./base/_core.css');
+@import url('./base/_list.css');
+@import url('./base/_page.css');
+@import url('./base/_typography.css');
 
-.bio {
-  display: grid;
-  grid-template-columns: 150px 1fr;
-  gap: 26px;
-  align-items: center;
-}
+@import url('./layout/_grid.css');
+@import url('./layout/_form.css');
 
-@media (min-width: 480px) {
-  .bio {
-    grid-template-columns: 200px 1fr;
-  }
-}
+@import url('./components/_articles.css');
+@import url('./components/_button.css');
+@import url('./components/_buttonwall.css');
+@import url('./components/_callout.css');
+@import url('./components/_logo.css');
+@import url('./components/_nav.css');
+@import url('./components/_toggle.css');
+@import url('./components/_tags.css');
+@import url('./components/_webrings.css');
 
-@media (min-width: 768px) {
-  .bio {
-    grid-template-columns: 1fr;
-  }
-}
+@import url('./pages/_homepage.css');
+@import url('./pages/_bloglist.css');
 
-.bio-pic {
-  max-width: 150px;
-  margin-bottom: 1rem;
-  --mask:
-    radial-gradient(7.00px at 50% calc(100% - 9.60px), #000 99%, #0000 101%) calc(50% - 12px) 0/24px 100%,
-    radial-gradient(7.00px at 50% calc(100% + 3.60px), #0000 99%, #000 101%) 50% calc(100% - 6px)/24px 100% repeat-x;
-  -webkit-mask: var(--mask);
-  mask: var(--mask);
-}
-
-@media (min-width: 480px) {
-  .bio-pic {
-    max-width: 200px;
-  }
-}
-
-
-/* Main content area */
-.content__main {
-  display: flex;
-  gap: 26px;
-  flex-wrap: wrap;
-}
-
-@media (min-width: 1200px) {
-  .content__main {
-    flex-wrap: nowrap;
-  }
-}
-
-@media (min-width: 768px) {
-  .content__inner {
-    flex: 1 1 auto;
-    width: 100%;
-  }
-}
-
-@media (min-width: 1200px) {
-  .content__extra {
-    flex: 1 0 auto;
-    width: 300px;
-    font-size: 80%;
-  }
-}
-
-/* Blog */
-.listing .draft a,
-.listing .draft time {
-  opacity: 0.5;
-}
-
-.listing li.draft::before {
-  content: '✏️  ' !important
-}
-
-.tag {
-  background-color: deepskyblue;
-  color: black;
-  padding: 2px 8px;
-  border-radius: 4px;
-  font-size: 90%;
-}
-
-
-/* Webrings */
-.webrings {
-  display: flex;
-  flex-direction: row;
-  row-gap: 15px;
-}
-
-.webrings>* {
-  display: flex;
-}
-
-.webring__prev,
-.webring__next,
-.webring-prev,
-.webring-next {
-  font-size: 0 !important;
-  width: 30px;
-  display: inline-block;
-  text-align: center;
-  transform: translateX(000.1px);
-  transition: 0.3s ease transform;
-}
-
-.webring__prev:hover,
-.webring__prev:focus,
-.webring-prev:hover,
-.webring-prev:focus {
-  transform: translateX(-2px)
-}
-
-.webring__next:hover,
-.webring__next:focus,
-.webring-next:hover,
-.webring-next:focus {
-  transform: translateX(2px)
-}
-
-.webring__prev::before,
-.webring__next::before,
-.webring-prev a::before,
-.webring-next a::before {
-  content: '➪';
-  font-size: 1rem;
-  display: inline-block;
-}
-
-.webring__prev::before,
-.webring-prev a::before {
-  transform: scaleX(-1);
-  display: inline-block;
-}
-
-.webring--neossg table {
-  border-spacing: 0;
-}
-
-.webring--neossg table td,
-.webring--neossg table th {
-  padding: 0;
-}
+@import url('./themes/_spooky.css');
