--- a/structure/templates/home.njk
+++ b/structure/templates/home.njk
@@ -9,14 +9,27 @@
     <section class="content__main">
         <div class="content__inner">
             <h1 class="visually-hidden">{{title}}</h1>
+            <div class="dashboard">
+                <article style="background-color: orangered; width: 100%; height: 300px; margin-bottom: 30px; break-inside: avoid;"></article>
+                <article style="background-color: orangered; width: 100%; height: 300px; margin-bottom: 30px; break-inside: avoid;"></article>
+                <article style="background-color: orangered; width: 100%; height: 300px; margin-bottom: 30px; break-inside: avoid;"></article>
+                <article style="background-color: orangered; width: 100%; height: 300px; margin-bottom: 30px; break-inside: avoid;"></article>
+                <article style="background-color: orangered; width: 100%; height: 300px; margin-bottom: 30px; break-inside: avoid;"></article>
+                <article style="background-color: orangered; width: 100%; height: 300px; margin-bottom: 30px; break-inside: avoid;"></article>
+                <article style="background-color: orangered; width: 100%; height: 300px; margin-bottom: 30px; break-inside: avoid;"></article>
+                <article style="background-color: orangered; width: 100%; height: 300px; margin-bottom: 30px; break-inside: avoid;"></article>
+                <article style="background-color: orangered; width: 100%; height: 300px; margin-bottom: 30px; break-inside: avoid;"></article>
+                <article style="background-color: orangered; width: 100%; height: 300px; margin-bottom: 30px; break-inside: avoid;"></article>
+                <article style="background-color: orangered; width: 100%; height: 300px; margin-bottom: 30px; break-inside: avoid;"></article>
+            </div>
             {%- block main -%}
             {{- content | safe -}}
             {%- endblock %}
         </div>
-        <div class="content__extra">
+        {# <div class="content__extra">
             {%- block right -%}
             {%- endblock %}
-        </div>
+        </div> #}
     </section>
 </main>
 {%- block bottom -%}
