--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,16 +1,20 @@
+@import url('./vendor/_reset.css');
+
 @import url('./abstracts/_variables.css');
 @import url('./abstracts/_utility.css');
 @import url('./abstracts/_animation.css');
 
+@import url('./themes/_spooky.css');
 @import url('./base/_font.css');
 @import url('./base/_form.css');
+@import url('./base/_img.css');
 @import url('./base/_core.css');
 @import url('./base/_list.css');
 @import url('./base/_page.css');
 @import url('./base/_typography.css');
 
 @import url('./layout/_grid.css');
-@import url('./layout/_form.css');
+@import url('./layout/_dashboard.css');
 
 @import url('./components/_articles.css');
 @import url('./components/_button.css');
