--- a/assets/css/abstracts/_variables.css
+++ b/assets/css/abstracts/_variables.css
@@ -15,6 +15,7 @@
 :root {
   --bodybg: #0b0b0b;
   --bg: Black;
+  --bodyrgb: 0,0,0;
   --accent: Gold;
   --interactive: OrangeRed;
   --link: DeepPink;
@@ -33,6 +34,7 @@
 html[data-scheme='dark'] {
   --bodybg: #0b0b0b;
   --bg: Black;
+  --bodyrgb: 0,0,0;
   --accent: Gold;
   --interactive: OrangeRed;
   --link: DeepPink;
@@ -53,6 +55,7 @@ html[data-scheme='dark'] {
   :root {
     --bodybg: LavenderBlush;
     --bg: Snow;
+    --bodyrgb: 255,250,250;
     --interactive: #e1007a;
     --accent: #d73a00;
     --link: Blue;
@@ -71,6 +74,7 @@ html[data-scheme='dark'] {
 html[data-scheme='light'] {
   --bodybg: LavenderBlush;
   --bg: Snow;
+  --bodyrgb: 255,250,250;
   --interactive: #e1007a;
   --accent: #d73a00;
   --link: Blue;
