--- a/content/index.njk
+++ b/content/index.njk
@@ -2,6 +2,7 @@
 title: Home
 ---
 {% extends 'structure/templates/home.njk'%}
+{% import "structure/components/components.njk" as macro with context %}
 
 {%- block left -%}
 <div class="bio">
@@ -17,14 +18,81 @@ title: Home
 </div>
 {%- endblock -%}
 {%- block main -%}
-<section>
-	<div class="reading-width">
+<div class="dashboard">
+	<article class="dashboard--item">
 		<p>Greetings, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you. I am Frills, the proud webmaster of this curious domain in this wonderous wifi world.</p>
 		<p>Do keep in mind that my collection is a work in progress, and I'm constantly adding new trinkets and reorganising shelves; sometimes you may find broken things... But fear not! I've already fixed the black hole I found yesterday.</p>
-		<p>Anyway, before you delve into the curios and oddities, enjoy this cozy cup of hot cocoa; a comforting beverage to keep those adventurous fingertips toasty as you wander through my internet sanctuary.</p>
-		<p class="italic">Cozy cup of hot cocoa was added to your inventory</p>
+	</article>
+	<article class="dashboard--item --colours">
+		<ul>
+			<li style="background-color: var(--text)"></li>
+			<li style="background-color: var(--accent)"></li>
+			<li style="background-color: var(--interactive)"></li>
+			<li style="background-color: var(--link)"></li>
+			<li style="background-color: var(--linkhover)"></li>
+			<li style="background-color: var(--logo-anim-1)"></li>
+			<li style="background-color: var(--logo-anim-2)"></li>
+			<li style="background-color: var(--logo-anim-3)"></li>
+			<li style="background-color: var(--logo-anim-4)"></li>
+			<li style="background-color: var(--logo-anim-5)"></li>
+			<li style="background-color: var(--logo-anim-6)"></li>
+			<li style="background-color: var(--bodybg)"></li>
+		</ul>
+	</article>
+	<article class="dashboard--item --piclog">
+		<figure>
+			<img src="https://piclog.blue/latest.php?id=152" loading="lazy" alt="" role="presentation">
+		</figure>
+		<figure>
+			<img src="/images/piclog/piclog0.jpg" alt="White woman with brown hair wearing an orange hat looks away from the camera to the left" loading="lazy">
+		</figure>
+		<figure>
+			<img src="/images/piclog/piclog1.jpg" alt="The sun rises through the clouds over the sea with people walking out towards the camera" loading="lazy">
+		</figure>
+	</article>
+	<div class="dashboard--item">
+		{{ macro.callout(
+			element = 'article',
+			modifiers = 'callout--small callout--info statusCafe',
+			header = '
+				<span id="statusCafe-emoji"></span>
+				<h2>Latest status</h2>
+				<time id="statusCafe-time"></time>',
+			body = '
+				<div id="statusCafe-status">No recent update :(</div>
+		') }}
 	</div>
-</section>
+	<div class="dashboard--item">
+		{{ macro.callout(
+			element = 'article',
+			modifiers = 'callout--small callout--info',
+			header = '
+			<span class="emoji" role="img" aria-label="Musical note">🎵</span>
+			<h2>Last played</h2>
+			<span><span id="lfmTime">right now</span></span>
+			',
+			body = '
+			<span id="lfmSong">No recently played song :(</span>
+			'
+		)}}
+	</div>
+	<div class="dashboard--item">
+		{{ macro.callout(
+			element = 'article',
+			modifiers = 'callout--small callout--info',
+			header = '
+			<span class="emoji" role="img" aria-label="Stack of books">📚</span>
+			<h2>Currently reading</h2>
+			',
+			body = '
+			The Eye of the World - Robert Jordan
+			'
+		)}}
+	</div>
+	<article class="dashboard--item --spotify">
+		<iframe title="Frills' On Repeat playlist on Spotify" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpuSqLqrl1FPT?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+	</article>
+</div>
 {%- endblock -%}
 
 {%- block right -%}
@@ -33,7 +101,8 @@ title: Home
 {% block bottom %}
 <div class="grid grid--main">
 	<div></div>
-	<aside class="webrings pt-1">
+	<aside class="webrings pt-2">
+		<h2 class="visually-hidden">Webrings</h2>
 		<div class="webring--retronaut">
 			<a href="https://webring.dinhe.net/prev/https://fri11s.neocities.org/" class="webring__prev">Previous site</a>
 			<a href="https://webring.dinhe.net/" target="_blank">retronaut</a>
@@ -56,7 +125,21 @@ title: Home
 
 {%- block scripts -%}
 <!--Current time-->
-<script type="text/javascript">let time=document.querySelector("#localTime");const d=new Date().toLocaleTimeString("en-US",{timeZone:"Europe/London",hour:"2-digit",minute:"2-digit"});e=d.replace(/\s/g,""),time.innerHTML=e;</script>
+<script type="text/javascript">
+	let time = document.querySelector("#localTime");
+	const d = new Date().toLocaleTimeString("en-US", {
+		timeZone: "Europe/London",
+		hour: "2-digit",
+		minute: "2-digit"
+	});
+	e = d.replace(/\s/g, ""), time.innerHTML = e;
+</script>
 {# <!--Carbon--> #}
 {# <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script> #}
+<!--Status.cafe-->
+<script defer>
+fetch("https://status.cafe/users/fri11s/status.json").then(t=>t.json()).then(t=>{if(!t.content.length){document.getElementById("statusCafe-status").innerHTML="No status yet.";return}document.getElementById("statusCafe-emoji").innerHTML=t.face,document.getElementById("statusCafe-time").innerHTML=t.timeAgo,document.getElementById("statusCafe-status").innerHTML=t.content});
+</script>
+<!--Last.fm-->
+<script type="text/javascript">let user="ooohbrap",url="https://lastfm-last-played.biancarosa.com.br/"+user+"/latest-song",song=document.querySelector("#lfmSong"),lastplayed=document.querySelector("#lfmTime");fetch(url).then(function(e){return e.json()}).then(function(e){song.innerHTML=e.track.name+" - "+e.track.artist["#text"],lastplayedunix=parseInt(e.track.date.uts),lastplayed.innerHTML=timeSince(lastplayedunix)});var timeSince=function(e){"object"!=typeof e&&(e=new Date(e));var t,o=Math.floor(new Date().getTime()/1e3-e),r=Math.floor(o/31536e3);return r>=1?t="year":(r=Math.floor(o/2592e3))>=1?t="month":(r=Math.floor(o/86400))>=1?t="day":(r=Math.floor(o/3600))>=1?t="hour":(r=Math.floor(o/60))>=1?t="minute":(r=o,t="second"),(r>1||0===r)&&(t+="s"),r+" "+t+" ago"};</script>
 {%- endblock -%}
