--- a/content/index.njk
+++ b/content/index.njk
@@ -19,11 +19,10 @@ title: Home
 {%- endblock -%}
 {%- block main -%}
 <div class="dashboard">
-	<article class="dashboard--item">
+	<article class="dashboard__item">
 		<p>Greetings, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you. I am Frills, the proud webmaster of this curious domain in this wonderous wifi world.</p>
-		<p>Do keep in mind that my collection is a work in progress, and I'm constantly adding new trinkets and reorganising shelves; sometimes you may find broken things... But fear not! I've already fixed the black hole I found yesterday.</p>
 	</article>
-	<article class="dashboard--item --colours">
+	<article class="dashboard__item --colours">
 		<ul>
 			<li style="background-color: var(--text)"></li>
 			<li style="background-color: var(--accent)"></li>
@@ -39,7 +38,13 @@ title: Home
 			<li style="background-color: var(--bodybg)"></li>
 		</ul>
 	</article>
-	<article class="dashboard--item --piclog">
+	<article class="dashboard__item">
+		<p>Do keep in mind that my collection is a work in progress, and I'm constantly adding new trinkets and reorganising shelves; sometimes you may find broken things... But fear not! I've already fixed the black hole I found yesterday.</p>
+	</article>
+	<article class="dashboard__item">
+		<div id="wcb" class="carbonbadge wcb-d"></div>
+	</article>
+	<article class="dashboard__item --gallery">
 		<figure>
 			<img src="https://piclog.blue/latest.php?id=152" loading="lazy" alt="" role="presentation">
 		</figure>
@@ -50,7 +55,7 @@ title: Home
 			<img src="/images/piclog/piclog1.jpg" alt="The sun rises through the clouds over the sea with people walking out towards the camera" loading="lazy">
 		</figure>
 	</article>
-	<div class="dashboard--item">
+	<div class="dashboard__item">
 		{{ macro.callout(
 			element = 'article',
 			modifiers = 'callout--small callout--info statusCafe',
@@ -62,7 +67,7 @@ title: Home
 				<div id="statusCafe-status">No recent update :(</div>
 		') }}
 	</div>
-	<div class="dashboard--item">
+	<div class="dashboard__item">
 		{{ macro.callout(
 			element = 'article',
 			modifiers = 'callout--small callout--info',
@@ -76,7 +81,7 @@ title: Home
 			'
 		)}}
 	</div>
-	<div class="dashboard--item">
+	<div class="dashboard__item">
 		{{ macro.callout(
 			element = 'article',
 			modifiers = 'callout--small callout--info',
@@ -89,7 +94,7 @@ title: Home
 			'
 		)}}
 	</div>
-	<article class="dashboard--item --spotify">
+	<article class="dashboard__item --spotify">
 		<iframe title="Frills' On Repeat playlist on Spotify" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpuSqLqrl1FPT?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 	</article>
 </div>
@@ -135,7 +140,7 @@ title: Home
 	e = d.replace(/\s/g, ""), time.innerHTML = e;
 </script>
 {# <!--Carbon--> #}
-{# <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script> #}
+<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
 <!--Status.cafe-->
 <script defer>
 fetch("https://status.cafe/users/fri11s/status.json").then(t=>t.json()).then(t=>{if(!t.content.length){document.getElementById("statusCafe-status").innerHTML="No status yet.";return}document.getElementById("statusCafe-emoji").innerHTML=t.face,document.getElementById("statusCafe-time").innerHTML=t.timeAgo,document.getElementById("statusCafe-status").innerHTML=t.content});
