✨ Add dashboard to homepage

--- a/structure/templates/home.njk
+++ b/structure/templates/home.njk
@@ -13,10 +13,10 @@
             {{- content | safe -}}
             {%- endblock %}
         </div>
-        <div class="content__extra">
+        {# <div class="content__extra">
             {%- block right -%}
             {%- endblock %}
-        </div>
+        </div> #}
     </section>
 </main>
 {%- block bottom -%}
