--- a/assets/css/components/_callout.css
+++ b/assets/css/components/_callout.css
@@ -16,6 +16,7 @@
 
 .callout--info {
   border-color: deepskyblue;
+  border-image: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%) 1;
   color: var(--text);
 }
 
@@ -29,6 +30,7 @@
 
 .callout h2 {
   font-size: inherit;
+  padding: 0;
   margin: 0;
   display: inline;
 }
