--- a/assets/css/layout/_grid.css
+++ b/assets/css/layout/_grid.css
@@ -28,3 +28,29 @@
     margin-left: 266px;
   }
 }
+
+/* Main content area */
+.content__main {
+  display: flex;
+  gap: 26px;
+  flex-wrap: wrap;
+}
+
+@media (min-width: 1200px) {
+  .content__main {
+    flex-wrap: nowrap;
+  }
+}
+
+.content__inner {
+  flex: 1 1 auto;
+  width: 100%;
+}
+
+@media (min-width: 1200px) {
+  .content__extra {
+    flex: 1 0 auto;
+    width: 300px;
+    font-size: 80%;
+  }
+}
