🛠️ Fix broken heading in Links

--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -160,7 +160,7 @@
 		</li>
 	</ul>
 
-	h2>Creatives</h2>
+	<h2>Creatives</h2>
 	<ul class="buttonwall">
 		{# Artists #}
 		<li class="buttonwall__item">
