--- a/content/index.njk
+++ b/content/index.njk
@@ -52,16 +52,16 @@ title: Home
 			<img src="/images/piclog/piclog1.jpg" alt="The sun rises through the clouds over the sea with people walking out towards the camera" loading="lazy">
 		</figure>
 	</article>
-	<article class="dashboard__item --spotify">
+	<article class="dashboard__item --spotify noscriptHide">
 		<iframe title="Frills' On Repeat playlist on Spotify" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpuSqLqrl1FPT?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 	</article>
-	<article class="dashboard__item">
+	<article class="dashboard__item --center">
 		<div id="wcb" class="carbonbadge wcb-d"></div>
 	</article>
 	<div class="dashboard__item">
 		{{ macro.callout(
 			element = 'article',
-			modifiers = 'callout--small callout--info statusCafe',
+			modifiers = 'callout--small callout--info statusCafe noscriptHide',
 			header = '
 				<span id="statusCafe-emoji"></span>
 				<h2>Latest status</h2>
@@ -73,7 +73,7 @@ title: Home
 	<div class="dashboard__item">
 		{{ macro.callout(
 			element = 'article',
-			modifiers = 'callout--small callout--info',
+			modifiers = 'callout--small callout--info noscriptHide',
 			header = '
 			<span class="emoji" role="img" aria-label="Musical note">🎵</span>
 			<h2>Last played</h2>
