--- a/content/links.njk
+++ b/content/links.njk
@@ -13,14 +13,237 @@ eleventyNavigation:
 {%- endblock -%}
 
 {%- block main -%}
-<section>
-    {% include "structure/components/buttonwall.njk" %}
+<section class="reading-width">
+  <ul class="buttonwall">
+    <li class="buttonwall__image">
+      <a href="https://midifreak.online/">
+        <img src="/images/buttons/coffeebug.png" alt="Coffee Bug">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://debtdeath.neocities.org/">
+        <img src="/images/buttons/debtdeath.png" alt="debtdeath">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://fizzsea.neocities.org/">
+        <img src="/images/buttons/fizzsea.png" alt="Fizzsea">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://grlrot.neocities.org/">
+        <img src="/images/buttons/grlrot.png" alt="grlrot">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://hillhouse.neocities.org/">
+        <img src="/images/buttons/hillhouse.png" alt="Hillhouse">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://inkcaps.neocities.org/">
+        <img src="/images/buttons/inkcaps.png" alt="Inkcaps">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://jasm1nii.xyz/">
+        <img src="/images/buttons/jasmines_journal.png" alt="Jasmine's Journal">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://lostletters.neocities.org/">
+        <img src="/images/buttons/lostletters.png" alt="Lost Letters">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://sunosin.neocities.org/">
+        <img src="/images/buttons/lipu_pi_jan_sunosin.png" alt="lipu pi jan sunosin">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://maria.town/">
+        <img src="/images/buttons/marzka_cafe.png" alt="Maria">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://maya.land/">
+        <img src="/images/buttons/maya_land.png" alt="Maya Land">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://melonking.net/">
+        <img src="/images/buttons/melonking.png" alt="Melon King">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://moonpr1sm.neocities.org">
+        <img src="/images/buttons/moonpr1sm.png" alt="Moon Prism">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://owlsroost.xyz/">
+        <img src="/images/buttons/owlsroost.png" alt="Owl's Roost">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://neonaut.neocities.org/">
+        <img src="/images/buttons/neonaut.png" alt="Neonaut">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://notprincehamlet.neocities.org/">
+        <img src="/images/buttons/notprincehamlet.png" alt="Not Prince Hamlet">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://pinkvampyr.neocities.org/">
+        <img src="/images/buttons/pinkvampyr.png" alt="PinkVampyr">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://pixelmoondust.neocities.org/">
+        <img src="/images/buttons/pixelmoondust.png" alt="Pixel Moondust">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://punkwasp.leprd.space/">
+        <img src="/images/buttons/punkwasp.png" alt="PunkWasp">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://sanguineroyal.com/">
+        <img src="/images/buttons/sanguineroyal.png" alt="Sanguine Royal">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://sneekrealm.neocities.org/">
+        <img src="/images/buttons/sneekrealm.png" alt="Sneek Realm">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://solaria.neocities.org/">
+        <img src="/images/buttons/solaria.png" alt="Solaria">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://xandra.cc/">
+        <img src="/images/buttons/xandra.png" alt="The Museum of Alexandra">
+      </a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://amberwilson.co.uk/" style="font-size: 13px;  background-color: #b6d0f1; color: #4b0e90;">Amber Wilson</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://eevis.codes/" style="font-size: 15px; background-color: #e76f51; color: #0d0221;">Eevis</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://jessicajournals.com" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1;">jessica journals</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://kittygiraudel.com/" style="font-size: 11px; background-color: #d97eb4; color: #222222;">Kitty Giraudel</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://nohappynonsense.net/" style="font-size: 10px; background-color: #fcfce3; color: black;">no happy nonsense</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://sleepydev.neocities.org" style="font-size: 13px; background-color: #f9f9f9; color: blueviolet;">sleepy dev</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://thinkdobecreate.com/" style="font-size: 12px; background-color: #7d4ce0; color: #fff;">Stephanie Eckles</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://10kph.neocities.org" style="font-size: 14px; background-color: #1c1e26; color: #e95678;">10kph</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://cassidoo.co" style="font-size: 12px; background-color: #fff; color: rgb(235, 72, 136);">Cassidy Williams</a>
+    </li>
+  </ul>
+
+  <h2>Friends</h2>
+  <ul class="buttonwall">
+    <li class="buttonwall__item">
+      <a href="https://gothhoblin.me" style="font-size: 12px; background-color: #083820; color: #fff;">goth hoblin</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://www.thenotsomiserable.co.uk" style="font-size: 12px; background-color: #5f0979; color: #fff;">the not so miserable</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://teafuellednonsense.wordpress.com" class="" style="font-size: 12px; background-color: #fff; color: #00aadc;">Justin Blogs Again!</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://justnik.me/" style="font-size: 12px; background-color: #2d3748; color: #fff;">justnik</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://www.owain.codes/" style="font-size: 12px; background-color: #222831; color: #b6ff00;">owain.codes</a>
+    </li>
+  </ul>
+
+  <h2>Creatives</h2>
+  <ul class="buttonwall">
+    {# Artists #}
+    <li class="buttonwall__item">
+      <a href="https://cheyennebarton.com/" style="font-size: 14px; background-color: #ffc929; color: #fa4723;">cheyenne barton</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://www.furrylittlepeach.com" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://www.patreon.com/girlscape" style="font-size: 13px; background-color: #ff91bb; color: #fff;">girlscape</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://leighellexson.com" style="font-size: 12px; background-color: #9bc18a; color: #fdfbf7;">Leigh Ellexson</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://www.pansy-shop.com" style="font-size: 16px; background-color: #ffe3e2; color: #220967;">pansy</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://www.patreon.com/palomathepeach" style="font-size: 12px; background-color: #feebb3; color: #212117;">paloma the peach</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://uncomfyco.com" style="font-size: 13px; background-color: #603814; color: #fff;">uncomfyco</a>
+    </li>
+  </ul>
+
+  <h2>Tools & fun things</h2>
+  <ul class="buttonwall">
+    <li class="buttonwall__image">
+      <a href="https://wiby.me/">
+        <img src="/images/buttons/wiby.png" alt="Wiby">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="http://web.archive.org/">
+        <img src="/images/buttons/wayback_machine.png" alt="Internet Archive: Wayback Machine">
+      </a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://caniuse.com/" style="font-size: 14px; background-color: #833502; color: #fff;">Can I Use</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://css-tricks.com/" style="font-size: 14px; background-color: #383838; color: #ff7a18;">CSS tricks</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://codepen.io/" style="font-size: 13px; background-color: #1e1f26; color: #47cf73;">CodePen</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://goblin.tools/" style="font-size: 14px; background-color: limegreen; color: black;">goblin tools</a>
+    </li>
+  </ul>
+
+  <button id="toggleHighContrast" class="button mb-1" aria-pressed="false">Enable high contrast</button>
 </section>
 {%- endblock -%}
 
 {%- block right -%}
-    {% include "structure/components/button.njk" %}
+{% include "structure/components/button.njk" %}
 {%- endblock -%}
 
 {% block scripts %}
+<script>
+  const t = document.getElementById('toggleHighContrast')
+  const w = document.querySelectorAll('.buttonwall')
+  const o = "Enable high contrast"
+  const c = "Disable high contrast"
+  if (t) {t.addEventListener("click", (function () {w.forEach((s => {s.classList.contains("--highcontrast") ? (t.innerHTML = o, t.setAttribute("aria-pressed", !1), s.classList.remove("--highcontrast")) : (t.innerHTML = c, t.setAttribute("aria-pressed", !0), s.classList.add("--highcontrast"))}))}));}
+</script>
 {% endblock %}
