--- a/content/index.njk
+++ b/content/index.njk
@@ -6,6 +6,7 @@ title: Home
 
 {%- block left -%}
 <div class="bio">
+	<h2 class="visually-hidden">Bio</h2>
 	<img class="bio-pic" src="/images/pic.png" alt="Black and white avatar illustration: a smiling woman with shoulder length dark hair, large eyes and sparkles surrounding her">
 	<ul class="unstyled">
 		<li><span class="emoji" role="img" aria-label="Pronouns">🌷</span> she/her</li>
@@ -20,6 +21,7 @@ title: Home
 {%- block main -%}
 <div class="dashboard">
 	<article class="dashboard__item">
+		<h2 class="visually-hidden">Intro</h2>
 		<p>Greetings, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you. I am Frills, the proud webmaster of this curious domain in this wonderous wifi world.</p>
 	</article>
 	<article class="dashboard__item --colours">
@@ -42,6 +44,7 @@ title: Home
 		<p>Do keep in mind that my collection is a work in progress, and I'm constantly adding new trinkets and reorganising shelves; sometimes you may find broken things... But fear not! I've already fixed the black hole I found yesterday.</p>
 	</article>
 	<article class="dashboard__item --gallery">
+		<h2 class="visually-hidden">Gallery</h2>
 		<figure>
 			<img src="https://piclog.blue/latest.php?id=152" loading="lazy" alt="" role="presentation">
 		</figure>
@@ -53,9 +56,11 @@ title: Home
 		</figure>
 	</article>
 	<article class="dashboard__item --spotify noscriptHide">
+		<h2 class="visually-hidden">Spotify playlist</h2>
 		<iframe title="Frills' On Repeat playlist on Spotify" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpuSqLqrl1FPT?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 	</article>
-	<article class="dashboard__item --center">
+	<article class="dashboard__item --center noscriptHide">
+		<h2 class="visually-hidden">Website carbon</h2>
 		<div id="wcb" class="carbonbadge wcb-d"></div>
 	</article>
 	<div class="dashboard__item">
