♿️ Update to WCAG 2.2

--- a/content/accessibility.njk
+++ b/content/accessibility.njk
@@ -11,7 +11,7 @@ emoji: <span class="emoji" aria-hidden="true">♿</span>
 {%- block main -%}
 <section>
 	<div class="reading-width">
-		<p>Making this website accessible to all is my <em>top priority</em>. I aim to meet a minimum of Web Content Accessibility Guidelines (WCAG) 2.1 Level AA. If you have come across something you find inaccessible, please get in touch.</p>
+		<p>Making this website accessible to all is my <em>top priority</em>. I aim to meet a minimum of Web Content Accessibility Guidelines (WCAG) 2.2 Level AA.</p>
 		<p>You should be able to:</p>
 		<ul>
 			<li>use your browser defaults for settings, sizes and styling</li>
@@ -19,12 +19,11 @@ emoji: <span class="emoji" aria-hidden="true">♿</span>
 			<li>navigate the site with just your keyboard</li>
 			<li>listen to the site using a screen reader</li>
 		</ul>
-
-		<h2>Website to do</h2>
-		<ul>
-			<li>✅ Add toggle for light/dark mode (browser preference override)</li>
-			<li>Add toggle for reducing animations (system preference override)</li>
-			<li>✅ Test with screen reader</li>
+		<p>If you have come across something you find inaccessible, please get in touch.</p>
+		<ul class="unstyled">
+			<li><span class="emoji" role="img" aria-label="Email">📧</span> <a href="mailto:fri11s@proton.me">fri11s@proton.me</a></li>
+			<li><span class="emoji" role="img" aria-label="Neocities profile">😺</span> <a href="https://neocities.org/site/fri11s">@fri11s@neocities.org</a></li>
+			<li><span class="emoji" role="img" aria-label="Mastodon">🐘</span> <a href="https://cutie.city/@frills">@frills@cutie.city</a></li>
 		</ul>
 
 	</div>
