--- a/content/index.njk
+++ b/content/index.njk
@@ -46,7 +46,7 @@ title: Home
 	<article class="dashboard__item --gallery">
 		<h2 class="visually-hidden">Gallery</h2>
 		<figure>
-			<img src="https://piclog.blue/latest.php?id=152" loading="lazy" alt="" role="presentation">
+			<img src="/images/piclog/piclog2.jpg" alt="My girl Orla, a yellow labrador, looking up, smiling, with mud on her face. So cute." loading="lazy">
 		</figure>
 		<figure>
 			<img src="/images/piclog/piclog0.jpg" alt="White woman with brown hair wearing an orange hat looks away from the camera to the left" loading="lazy">
