--- a/content/index.njk
+++ b/content/index.njk
@@ -46,13 +46,13 @@ title: Home
 	<article class="dashboard__item --gallery">
 		<h2 class="visually-hidden">Gallery</h2>
 		<figure>
-			<img src="/images/piclog/piclog2.jpg" alt="My girl Orla, a yellow labrador, looking up, smiling, with mud on her face. So cute." loading="lazy">
+			<img src="/images/piclog/piclog2.jpg" alt="Me standing on a wooden jetty looking out at the lake with my labrador, Orla. A lens flare from the sun in the top left." loading="lazy">
 		</figure>
 		<figure>
-			<img src="/images/piclog/piclog0.jpg" alt="White woman with brown hair wearing an orange hat looks away from the camera to the left" loading="lazy">
+			<img src="/images/piclog/piclog0.jpg" alt="White woman with brown hair wearing an orange hat looks away from the camera to the left." loading="lazy">
 		</figure>
 		<figure>
-			<img src="/images/piclog/piclog1.jpg" alt="The sun rises through the clouds over the sea with people walking out towards the camera" loading="lazy">
+			<img src="/images/piclog/piclog1.jpg" alt="The sun rises through the clouds over the sea with people walking out of the sea." loading="lazy">
 		</figure>
 	</article>
 	<article class="dashboard__item --spotify noscriptHide">
