--- a/structure/core/_template-end.njk
+++ b/structure/core/_template-end.njk
@@ -1,3 +1,3 @@
-<script data-goatcounter="https://frills.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+<script src="https://tinylytics.app/embed/vaBs-cmxP5vsJthkUoaX.js" defer></script>
 
 </html>
