📈  Add kudos button

--- a/structure/pages/item-blog.njk
+++ b/structure/pages/item-blog.njk
@@ -19,6 +19,7 @@
 {%- endblock -%}
 
 {%- block right -%}
+    <button class="tinylytics_kudos noscriptHide"></button>
     <ul class="unstyled">
         {% if tags.includes("weeknotes") %}
         {% else %}
