📈  Add kudos button

--- a/structure/core/_template-end.njk
+++ b/structure/core/_template-end.njk
@@ -1,3 +1,3 @@
-<script src="https://tinylytics.app/embed/vaBs-cmxP5vsJthkUoaX.js" defer></script>
+<script src="https://tinylytics.app/embed/vaBs-cmxP5vsJthkUoaX.js?kudos" defer></script>
 
 </html>
