--- a/content/links.njk
+++ b/content/links.njk
@@ -13,6 +13,7 @@ eleventyNavigation:
 {%- endblock -%}
 
 {%- block main -%}
+<h1>{{title}}</h1>
 <section class="reading-width">
   <ul class="buttonwall">
     <li class="buttonwall__image">
@@ -88,6 +89,11 @@ eleventyNavigation:
     <li class="buttonwall__image">
       <a href="https://neonaut.neocities.org/">
         <img src="/images/buttons/neonaut.png" alt="Neonaut">
+      </a>
+    </li>
+      <li class="buttonwall__image">
+      <a href="https://nonkiru.art">
+        <img src="/images/buttons/nonkiru.png" alt="Nonkiru">
       </a>
     </li>
     <li class="buttonwall__image">
