--- a/structure/pages/item-experiment.njk
+++ b/structure/pages/item-experiment.njk
@@ -1,6 +1,7 @@
 {% extends "structure/templates/page-full.njk" %}
 
 {% block main %}
+	<h1>{{title}}</h1>
     {{ content | safe }}
 {% endblock %}
 
