--- a/structure/pages/list-changelog.njk
+++ b/structure/pages/list-changelog.njk
@@ -1,6 +1,7 @@
 {% extends "structure/templates/page-3col.njk" %}
 
 {% block main %}
+	<h1>{{title}}</h1>
 	<div class="headings-small pt-1">
 	{% for post in postslist | reverse %}
 		
