--- a/assets/css/abstracts/_variables.css
+++ b/assets/css/abstracts/_variables.css
@@ -17,6 +17,7 @@
   --bg: Black;
   --bodyrgb: 0,0,0;
   --accent: Gold;
+  --separator: PaleGreen;
   --interactive: OrangeRed;
   --link: DeepPink;
   --linkaccent: #620035;
@@ -36,6 +37,7 @@ html[data-scheme='dark'] {
   --bg: Black;
   --bodyrgb: 0,0,0;
   --accent: Gold;
+  --separator: PaleGreen;
   --interactive: OrangeRed;
   --link: DeepPink;
   --linkaccent: #620035;
@@ -57,6 +59,7 @@ html[data-scheme='dark'] {
     --bg: Snow;
     --bodyrgb: 255,250,250;
     --interactive: #e1007a;
+    --separator: DeepPink;
     --accent: #d73a00;
     --link: Blue;
     --linkaccent: LightSteelBlue;
@@ -76,6 +79,7 @@ html[data-scheme='light'] {
   --bg: Snow;
   --bodyrgb: 255,250,250;
   --interactive: #e1007a;
+  --separator: DeepPink;
   --accent: #d73a00;
   --link: Blue;
   --linkaccent: LightSteelBlue;
