--- a/assets/css/components/_articles.css
+++ b/assets/css/components/_articles.css
@@ -1,7 +1,7 @@
 .article {
   padding-bottom: 2rem;
   margin-bottom: 2rem;
-  border-bottom: 2px solid var(--accent);
+  border-bottom: 2px solid var(--separator);
 }
 
 .article:last-of-type {
