--- a/assets/css/components/_nav.css
+++ b/assets/css/components/_nav.css
@@ -1,7 +1,11 @@
 
-.page__nav--top {
-  max-width: 50vw;
+
+@media (min-width: 1200px) {
+  .page__nav--top {
+    max-width: 50vw;
+  }
 }
+
 
 .page__nav ul {
   display: flex;
