--- a/content/guestbook.njk
+++ b/content/guestbook.njk
@@ -15,6 +15,21 @@ eleventyNavigation:
 {%- block main -%}
 <h1>{{title}}</h1>
 <section class="reading-width h-sm">
+  <p>Hello! Thank you for stopping by. Please leave a message to say you were here or to share your website.</p>
+  <p>Be nice, all usual code of conduct rules apply and I reserve the right to delete comments.</p>
+  <details class="pb-2">
+    <summary>Code of conduct</summary>
+    <div class="py-1">
+      <ul class="stars">
+        <li>No hate speech, whatsoever.</li>
+        <li>No harrassment.</li>
+        <li>No trolling.</li>
+        <li>No spam.</li>
+        <li>Do not share private information, especially if you're a minor.</li>
+        <li>Be respectful to me and other commenters.</li>
+      </ul>
+    </div>
+  </details>
   <noscript>
       {{ macro.callout(
         element = 'div',
