--- a/content/site.njk
+++ b/content/site.njk
@@ -32,6 +32,7 @@ emoji: <span class="emoji" aria-hidden="true">👩‍💻</span>
 			<li>Logo font is <a href="https://github.com/satsuyako/CherryBomb" target="_blank">Cherry Bomb</a></li>
 			<li>Body font is <a href="https://brailleinstitute.org/freefont" target="_blank">Atkinson Hyperlegible</a></li>
 			<li>Web analytics by <a href="https://www.goatcounter.com/" target="_blank">Goat Counter</a></li>
+			<li><a href="https://virtualobserver.moe/ayano/comment-widget" target="_blank">Guestbook widget</a> by virtualobserver</li>
 		</ul>
 	</div>
 </section>
