💄  Update bodybg variable for dark mode

--- a/assets/css/themes/_spooky.css
+++ b/assets/css/themes/_spooky.css
@@ -1,5 +1,5 @@
 html[data-scheme='dark'][data-spooky='true'] {
-  --bodybg: #0b0b0b;
+  --bodybg: #1e1e1e;
   --bg: Black;
   --accent: Gold;
   --interactive: OrangeRed;
