--- a/assets/css/abstracts/_variables.css
+++ b/assets/css/abstracts/_variables.css
@@ -13,7 +13,7 @@
 /* Colours */
 /* Dark mode */
 :root {
-  --bodybg: #0b0b0b;
+  --bodybg: #1e1e1e;
   --bg: Black;
   --bodyrgb: 0,0,0;
   --accent: Gold;
@@ -33,7 +33,7 @@
   --logo-anim-6: hsl(204, 70%, 70%);
 }
 html[data-scheme='dark'] {
-  --bodybg: #0b0b0b;
+  --bodybg: #1e1e1e;
   --bg: Black;
   --bodyrgb: 0,0,0;
   --accent: Gold;
