🎨  Update heading structure

--- a/content/site.njk
+++ b/content/site.njk
@@ -8,6 +8,7 @@ emoji: <span class="emoji" aria-hidden="true">👩‍💻</span>
 {% endblock %}
 
 {%- block main -%}
+<h1>{{title}}</h1>
 <section>
 	<div class="reading-width">
 		<h2>Site links</h2>
