🟧  Add dates to experiments for RSS feeds

--- a/content/experiments/change-background-colour-with-range-input.njk
+++ b/content/experiments/change-background-colour-with-range-input.njk
@@ -1,7 +1,7 @@
 ---
 title: Changing background colour with range input
 description: Use the range input to change the colour of the background
-date: 2023-08
+date: 2023-08-01
 tags:
 - javascript
 - css variables
