--- a/content/experiments/css-skull.njk
+++ b/content/experiments/css-skull.njk
@@ -1,7 +1,7 @@
 ---
 title: CSS Skull
 description: Pure CSS skull, he's kinda cute. I made this in 2018, and is definitely due for a rebuild/refactor
-date: 2023-08
+date: 2023-09-01
 tags:
 - css art
 ---
